feat(gateway): expose the subscribable plans of an Edge API